feat: looks like better

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <title>Options</title>
+    <title>苍耳单词-选项</title>
   </head>
 
   <body>
