--- a/src/pages/panel/index.html
+++ b/src/pages/panel/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="ch-ZN">
   <head>
     <meta charset="UTF-8" />
-    <title>Devtools Panel</title>
+    <title></title>
   </head>
 
   <body>
