--- a/src/pages/popup/index.html
+++ b/src/pages/popup/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>苍耳单词</title>
   </head>
 
   <body>
