--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,16 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .demo {
+        text-align: center;
+        margin: 0 auto;
+        width: 900px;
+      }
+    </style>
   </head>
   <body>
-    <div style="text-align: left; margin: auto 0px">
-      <div>Hello canger</div>
-      <textarea name="" id="" cols="60" rows="10" placeholder="example"></textarea>
-    </div>
+    <div class="demo">
+      <div>
+        <p
+          >I am happy to join with you today in what will go down in history as the greatest demonstration for freedom
+          in the history of our nation.</p
+        >
 
-    <div style="text-align: left; margin: auto 0px">
-      <div>Hello canger</div>
+        <p
+          >Five score years ago, a great American, in whose symbolic shadow we stand today, signed the Emancipation
+          Proclamation. This momentous decree came as a great beacon light of hope to millions of Negro slaves, who had
+          been seared in the flames of withering injustice. It came as a joyous daybreak to end the long night of their
+          captivity.</p
+        >
+
+        <p
+          >But one hundred years later, the Negro still is not free. One hundred years later, the life of the Negro is
+          still sadly crippled by the manacles of segregation and the chains of discrimination. One hundred years later,
+          the Negro lives on a lonely island of poverty in the midst of a vast ocean of material prosperity. One hundred
+          years later, the Negro is still languished in the corners of American society and finds himself an exile in
+          his own land. And so we've come here today to dramatize a shameful condition.</p
+        >
+
+        <p
+          >In a sense we have come to our nation's capital to cash a check. When the architects of our republic wrote
+          the magnificent words of the Constitution and the Declaration of Independence, they were signing a promissory
+          note to which every American was to fall heir. This note was a promise that all men, yes, black men as well as
+          white men, would be guaranteed the unalienable rights of life, liberty, and the pursuit of happiness. It is
+          obvious today that America has defaulted on this promissory note, insofar as her citizens of color are
+          concerned. Instead of honoring this sacred obligation, America has given the Negro people a bad check, a check
+          which has come back marked "insufficient funds."</p
+        >
+
+        <p
+          >But we refuse to believe that the bank of justice is bankrupt. We refuse to believe that there are
+          insufficient funds in the great vaults of opportunity of this nation. And so we have come to cash this check,
+          a check that will give us upon demand the riches of freedom and the security of justice.</p
+        >
+      </div>
       <textarea name="" id="" cols="60" rows="10" placeholder="example"></textarea>
+      <div>
+        <div>Hello canger</div>
+        <textarea name="" id="" cols="60" rows="10" placeholder="example"></textarea>
+      </div>
     </div>
   </body>
 </html>
