chore: update README and prettier

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
       .demo {
-        text-align: center;
+        text-align: justify;
         margin: 0 auto;
         width: 900px;
       }
@@ -15,42 +15,34 @@
   <body>
     <div class="demo">
       <div>
+        <h2>We shall never surrender</h2>
         <p
-          >I am happy to join with you today in what will go down in history as the greatest demonstration for freedom
-          in the history of our nation.</p
-        >
-
-        <p
-          >Five score years ago, a great American, in whose symbolic shadow we stand today, signed the Emancipation
-          Proclamation. This momentous decree came as a great beacon light of hope to millions of Negro slaves, who had
-          been seared in the flames of withering injustice. It came as a joyous daybreak to end the long night of their
-          captivity.</p
-        >
-
-        <p
-          >But one hundred years later, the Negro still is not free. One hundred years later, the life of the Negro is
-          still sadly crippled by the manacles of segregation and the chains of discrimination. One hundred years later,
-          the Negro lives on a lonely island of poverty in the midst of a vast ocean of material prosperity. One hundred
-          years later, the Negro is still languished in the corners of American society and finds himself an exile in
-          his own land. And so we've come here today to dramatize a shameful condition.</p
-        >
-
-        <p
-          >In a sense we have come to our nation's capital to cash a check. When the architects of our republic wrote
-          the magnificent words of the Constitution and the Declaration of Independence, they were signing a promissory
-          note to which every American was to fall heir. This note was a promise that all men, yes, black men as well as
-          white men, would be guaranteed the unalienable rights of life, liberty, and the pursuit of happiness. It is
-          obvious today that America has defaulted on this promissory note, insofar as her citizens of color are
-          concerned. Instead of honoring this sacred obligation, America has given the Negro people a bad check, a check
-          which has come back marked "insufficient funds."</p
-        >
-
-        <p
-          >But we refuse to believe that the bank of justice is bankrupt. We refuse to believe that there are
-          insufficient funds in the great vaults of opportunity of this nation. And so we have come to cash this check,
-          a check that will give us upon demand the riches of freedom and the security of justice.</p
-        >
-      </div>
+          >Turning once again to the question of invasion, I would observe that there has never been a period in all
+          these long centuries of which we boast when an absolute guarantee against invasion could have been given to
+          our people. But I have myself full confidence that if all do their duty, if nothing is neglected, and the best
+          arrangements are made as they are being made, we shall prove ourselves once more able to defend our island
+          home. To ride out the storm of war and to outlive the menace of tyranny. If necessary, for years, if
+          necessary, alone. </p
+        ><p
+          >At any rate, that is what we are going to try to do. That is the resolve of His Majesty’s Government, every
+          man of them. That is the will of Parliament and nation. The British Empire and the French Republic, linked
+          together in their cause and in their need, will defend to the death their native soil. Aiding each other like
+          good comrades to the utmost of their strength. Even though large tracts of Europe and many old and famous
+          states have fallen or may fall into the grip of the Gestapo and all the odious apparatus of the Nazi rule, we
+          shall not flag or fail. </p
+        ><p>We shall go on to the end! </p><p>We shall fight in France. </p
+        ><p>We shall fight on the seas and the oceans. </p
+        ><p>We shall fight with growing confidence and growing strengths in the air. </p
+        ><p>We shall defend our island, whatever the cost may be. </p><p>We shall fight on the beaches. </p
+        ><p>We shall fight on the landing grounds. </p><p>We shall fight in the fields and in the streets. </p
+        ><p>We shall fight in the hills. </p><p>We shall never surrender! </p
+        ><p
+          >And if which I do not for a moment believe, this island or large part of it were subjugated and starving,
+          then our empire beyond the seas, armed and guarded by the British fleet, armed and guarded by the British
+          fleet, would carry on the struggle. Until, in God’s good time, the New World, with all its power and might,
+          steps forth to the rescue and the liberation of the old! </p
+        ><p>Victory! Victory! Victory! </p></div
+      >
       <textarea name="" id="" cols="60" rows="10" placeholder="example"></textarea>
     </div>
   </body>
