--- a/src/pages/newtab/index.html
+++ b/src/pages/newtab/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>New tab</title>
+    <title>新标签页: 苍耳Canger</title>
   </head>
 
   <body>
