feat: newtab improvement and code refactor

--- a/src/pages/newtab/index.html
+++ b/src/pages/newtab/index.html
@@ -2,11 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>新标签页: 苍耳Canger</title>
+    <title>新标签页: Canger</title>
   </head>
 
   <body>
-    <div id="app-container"></div>
+    <div id="canger-app"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
